--- a/src/assets/css/css.css
+++ b/src/assets/css/css.css
@@ -133,6 +133,7 @@
     justify-content: center;
     flex-direction: column;
     padding-bottom: 5%;
+    padding-top: 5%;
 }
 #mainServices{
     display: flex;
@@ -158,7 +159,7 @@
     font-size: 35px;
     font-weight: bold;
     padding-bottom: 10px;
-    line-height: 111px;
+    /* line-height: 111px; */
     /* border: 5px solid #a6aaff; */
     /* border: solid; */
     margin-bottom: 20px;
@@ -216,6 +217,64 @@
 }
 #servicesImg2{
     font-size: 500px;
+}
+.whyUsCont{
+    width: 100%;
+    background-color: #cdcdd1;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.whyUsTitle{
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 40px;
+    padding: 20px;
+}
+.whyUsMain{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.whyUsMainCard{
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    margin: 20px;
+    width: 300px;
+}
+.advantages-item-count{
+    font-size: 1.0625rem;
+    font-family: Montserrat,sans-serif;
+    font-weight: 700;
+    color: #2c7ae7;
+    margin-top: .125rem;
+    position: relative;
+    z-index: 1;
+    padding-right: .3125rem;
+}
+.advantages-item-count::after {
+    content: "";
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    width: 3.25rem;
+    height: 1px;
+    background-color: #303036;
+    margin-top: -1px;
+}
+.advantages-item-info{
+    position: relative;
+    z-index: 1;
+    padding-left: 3.75rem;
+}
+.advantages-item-title{
+    font-size: 25px;
+    font-weight: 700;
 }
 @media (max-width: 799px) {
     #homeBgMainDiv{
